# scratch

./: pyproject.toml
.ipynb_checkpoints/: shitty_table_structure-checkpoint.ipynb
