[tool.poetry]
name = "scratch"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshuadouglasgreenhalgh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.7"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
